--- a/index.html
+++ b/index.html
@@ -67,6 +67,6 @@
                 Coded by <a href="https://khalteck.github.io/New-portfolio/">Khalid Oyeneye</a>.
             </div>
         </section>
-        <script src="/dist/script.js" async defer></script>
+        <script src="script.js" async defer></script>
     </body>
 </html>
