--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -19,7 +19,7 @@
                     <p class="text-white font-[100] text-gray-100 mb-[-15px]">My balance</p><br>
                     <h1 class="text-[23px] font-[500]">$921.48</h1>
                 </div>
-                <img src="logo.svg" class="w-[60px] h-auto">
+                <img src="logo.svg" class="w-[60px] h-auto" alt="logo">
             </div>
             <div class="w-full p-[25px] bg-white mt-[18px] rounded-2xl">
                 <h1 class="text-[20px] font-[600]">Spending - Last 7 days</h1>
